refit CLI to use config loading util.

--- a/client_consumer/etc/pulp/consumer/consumer.conf
+++ b/client_consumer/etc/pulp/consumer/consumer.conf
@@ -15,7 +15,7 @@
 #   This is a path to a directory of trusted CA certificates.
 
 [server]
-# host = localhost.localdomain
+# host =
 # port = 443
 # api_prefix = /pulp/api
 # rsa_pub = /etc/pki/pulp/consumer/server/rsa_pub.key
